graded task1 - input elijah's link

--- a/public/styles.css
+++ b/public/styles.css
@@ -22,7 +22,7 @@ a:hover {
 
 div > button {
     width: 200px;
-    length: 150px;
+    height: 150px;
     padding: 20px;
     margin: 10px;
     font-size: 20px;
